objects/Insurances__c.object
<CustomObject>
    <description>A location to store Linsurance information for Network Member Accounts and In-House Network Member Accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Enter the Insurance amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <inlineHelpText>Enter the date the policy expires</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Companies_Name__c</fullName>
        <inlineHelpText>Enter the insurance companies name</inlineHelpText>
        <label>Insurance Companies Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <inlineHelpText>Please select an Insurance type</inlineHelpText>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Liability</fullName>
                </value>
                <value>
                    <fullName>Professional Indemnity</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Accounts Contact. This could also be the contact name on the policy</inlineHelpText>
        <label>Policy Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <inlineHelpText>Enter the insurance policy number</inlineHelpText>
        <label>Policy Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Insurance</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Insurance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>